--- a/java/res/drawable/btn_keyboard_key_lxx_dark.xml
+++ b/java/res/drawable/btn_keyboard_key_lxx_dark.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2014 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -16,29 +15,55 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Action keys. -->
-    <item android:state_active="true" android:state_pressed="true"
-          android:drawable="@drawable/btn_keyboard_key_active_pressed_lxx_dark" />
-    <item android:state_active="true"
-          android:drawable="@drawable/btn_keyboard_key_active_lxx_dark" />
+    <item android:state_active="true" android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/key_background_pressed_lxx_dark" />
+            <corners android:radius="@dimen/circle_size" />
+        </shape>
+    </item>
+    <item android:state_active="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/key_background_lxx_dark" />
+            <corners android:radius="@dimen/circle_size" />
+        </shape>
+    </item>
 
     <!-- Toggle keys. Use checkable/checked state. -->
-    <item android:state_checkable="true" android:state_checked="true" android:state_pressed="true"
-          android:drawable="@drawable/btn_keyboard_key_pressed_on_lxx_dark" />
-    <item android:state_checkable="true" android:state_pressed="true"
-          android:drawable="@drawable/btn_keyboard_key_pressed_off_lxx_dark" />
-    <item android:state_checkable="true" android:state_checked="true"
-          android:drawable="@drawable/btn_keyboard_key_normal_on_lxx_dark" />
-    <item android:state_checkable="true"
-          android:drawable="@drawable/btn_keyboard_key_normal_off_lxx_dark" />
+    <item android:drawable="@drawable/btn_keyboard_key_pressed_on_lxx_dark" android:state_checkable="true" android:state_checked="true" android:state_pressed="true">
+
+    </item>
+    <item android:drawable="@drawable/btn_keyboard_key_pressed_off_lxx_dark" android:state_checkable="true" android:state_pressed="true">
+
+    </item>
+    <item android:drawable="@drawable/btn_keyboard_key_normal_on_lxx_dark" android:state_checkable="true" android:state_checked="true">
+
+    </item>
+    <item android:drawable="@drawable/btn_keyboard_key_normal_off_lxx_dark" android:state_checkable="true">
+
+    </item>
 
     <!-- Empty background keys. -->
-    <item android:state_empty="true" android:state_pressed="true"
-          android:drawable="@color/key_background_pressed_lxx_dark" />
-    <item android:state_empty="true"
-          android:drawable="@android:color/transparent" />
+    <item android:state_empty="true" android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/key_background_pressed_lxx_dark" />
+            <corners android:radius="@dimen/circle_size" />
+        </shape>
+    </item>
+    <item android:drawable="@android:color/transparent" android:state_empty="true">
+
+    </item>
 
     <!-- Normal keys. -->
-    <item android:state_pressed="true"
-          android:drawable="@color/key_background_pressed_lxx_dark" />
-    <item android:drawable="@color/key_background_lxx_dark" />
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/key_background_pressed_lxx_dark" />
+            <corners android:radius="@dimen/circle_size" />
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/key_background_lxx_dark" />
+            <corners android:radius="@dimen/circle_size" />
+        </shape>
+    </item>
 </selector>
