--- a/java/res/layout/more_suggestions.xml
+++ b/java/res/layout/more_suggestions.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 /*
 **
 ** Copyright 2011, The Android Open Source Project
@@ -18,19 +17,17 @@
 */
 -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
->
-    <com.android.inputmethod.latin.suggestions.MoreSuggestionsView
-        xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.tian"
+    android:orientation="vertical">
+
+    <com.android.inputmethod.latin.suggestions.MoreSuggestionsView xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.tian"
         android:id="@+id/more_suggestions_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        latin:keyLetterSize="@dimen/config_suggestion_text_size"
-        latin:keyLabelSize="@dimen/config_suggestion_text_size"
+        latin:keyHintLetterColor="@android:color/white"
         latin:keyHintLetterRatio="@fraction/config_more_suggestions_info_ratio"
-        latin:keyHintLetterColor="@android:color/white" />
+        latin:keyLabelSize="@dimen/config_suggestion_text_size"
+        latin:keyLetterSize="@dimen/config_suggestion_text_size" />
 </LinearLayout>
