--- a/java/res/values/attrs.xml
+++ b/java/res/values/attrs.xml
@@ -540,6 +540,7 @@
             <enum name="symbols" value="5" />
             <enum name="symbolsShifted" value="6"  />
             <enum name="phone" value="7"  />
+            <enum name="phone_pundxi" value="-1007"  />
             <enum name="phoneSymbols" value="8"  />
             <enum name="number" value="9"  />
             <enum name="emojiRecents" value="10" />
