--- a/java/res/values/dimens.xml
+++ b/java/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="circle_size">180dp</dimen>
+
+    <dimen name="circle_size2">8dp</dimen>
 </resources>
