--- a/java/res/xml-sw600dp/kbd_phone_pundxi.xml
+++ b/java/res/xml-sw600dp/kbd_phone_pundxi.xml
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
 /*
 **
-** Copyright 2011, The Android Open Source Project
+** Copyright 2008, The Android Open Source Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -17,8 +18,9 @@
 */
 -->
 
+
 <Keyboard xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.tian"
     latin:keyWidth="18%p"
     latin:touchPositionCorrectionData="@array/touch_position_correction_data_default">
-    <include latin:keyboardLayout="@xml/rows_phone" />
+    <include latin:keyboardLayout="@xml/rows_phone_pundxi" />
 </Keyboard>
