--- a/java/res/xml-sw600dp/rows_symbols.xml
+++ b/java/res/xml-sw600dp/rows_symbols.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 /*
 **
 ** Copyright 2011, The Android Open Source Project
@@ -18,58 +17,41 @@
 */
 -->
 
-<merge
-    xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.tian"
->
-    <include
-        latin:keyboardLayout="@xml/key_styles_common" />
-    <include
-        latin:keyboardLayout="@xml/key_styles_currency" />
-    <Row
-        latin:keyWidth="9.0%p"
-    >
-        <include
-            latin:keyboardLayout="@xml/rowkeys_symbols1" />
+<merge xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.tian">
+    <include latin:keyboardLayout="@xml/key_styles_common" />
+    <include latin:keyboardLayout="@xml/key_styles_currency" />
+    <Row latin:keyWidth="9.0%p">
+        <include latin:keyboardLayout="@xml/rowkeys_symbols1" />
         <Key
             latin:keyStyle="deleteKeyStyle"
             latin:keyWidth="fillRight" />
     </Row>
-    <Row
-        latin:keyWidth="9.0%p"
-    >
+    <Row latin:keyWidth="9.0%p">
         <include
-            latin:keyboardLayout="@xml/rowkeys_symbols2"
-            latin:keyXPos="4.5%p" />
+            latin:keyXPos="4.5%p"
+            latin:keyboardLayout="@xml/rowkeys_symbols2" />
         <Key
             latin:keyStyle="enterKeyStyle"
             latin:keyWidth="fillRight" />
     </Row>
-        <Row
-        latin:keyWidth="9.0%p"
-    >
+    <Row latin:keyWidth="9.0%p">
         <Key
             latin:keyStyle="toMoreSymbolKeyStyle"
             latin:keyWidth="10.0%p" />
-        <Key
-            latin:keySpec="\\" />
-        <Key
-            latin:keySpec="=" />
-        <include
-            latin:keyboardLayout="@xml/rowkeys_symbols3" />
+        <Key latin:keySpec="\\" />
+        <Key latin:keySpec="=" />
+        <include latin:keyboardLayout="@xml/rowkeys_symbols3" />
         <Key
             latin:keyStyle="toMoreSymbolKeyStyle"
             latin:keyWidth="fillRight" />
     </Row>
     <Row
-        latin:keyWidth="9.0%p"
         latin:backgroundType="functional"
-    >
+        latin:keyWidth="9.0%p">
         <Key
             latin:keyStyle="toAlphaKeyStyle"
             latin:keyWidth="10.0%p" />
-        <include
-            latin:keyboardLayout="@xml/row_symbols4" />
-        <include
-            latin:keyboardLayout="@xml/key_emoji" />
+        <include latin:keyboardLayout="@xml/row_symbols4" />
+        <include latin:keyboardLayout="@xml/key_emoji" />
     </Row>
 </merge>
