--- a/java/res/xml/rows_phone.xml
+++ b/java/res/xml/rows_phone.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 /*
 **
 ** Copyright 2011, The Android Open Source Project
@@ -18,62 +17,51 @@
 */
 -->
 
-<merge
-    xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.tian"
->
-    <include
-        latin:keyboardLayout="@xml/key_styles_common" />
-    <include
-        latin:keyboardLayout="@xml/key_styles_number" />
+<merge xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.tian">
+    <include latin:keyboardLayout="@xml/key_styles_common" />
+    <include latin:keyboardLayout="@xml/key_styles_number" />
     <Row>
+        <Key latin:keyStyle="num1KeyStyle" />
+        <Key latin:keyStyle="num2KeyStyle" />
+        <Key latin:keyStyle="num3KeyStyle" />
         <Key
-            latin:keyStyle="num1KeyStyle" />
-        <Key
-            latin:keyStyle="num2KeyStyle" />
-        <Key
-            latin:keyStyle="num3KeyStyle" />
-        <Key
-            latin:keySpec="-"
-            latin:moreKeys="+"
-            latin:keyLabelFlags="hasPopupHint"
-            latin:keyStyle="numKeyStyle"
             latin:backgroundType="functional"
-            latin:keyWidth="fillRight" />
+            latin:keyLabelFlags="hasPopupHint"
+            latin:keySpec="-"
+            latin:keyStyle="numKeyStyle"
+            latin:keyWidth="fillRight"
+            latin:moreKeys="+" />
     </Row>
     <Row>
+        <Key latin:keyStyle="num4KeyStyle" />
+        <Key latin:keyStyle="num5KeyStyle" />
+        <Key latin:keyStyle="num6KeyStyle" />
         <Key
-            latin:keyStyle="num4KeyStyle" />
-        <Key
-            latin:keyStyle="num5KeyStyle" />
-        <Key
-            latin:keyStyle="num6KeyStyle" />
-        <Key
+            latin:backgroundType="functional"
             latin:keySpec="."
             latin:keyStyle="numKeyStyle"
-            latin:backgroundType="functional"
             latin:keyWidth="fillRight" />
     </Row>
     <Row>
-        <Key
-            latin:keyStyle="num7KeyStyle" />
-        <Key
-            latin:keyStyle="num8KeyStyle" />
-        <Key
-            latin:keyStyle="num9KeyStyle" />
+        <Key latin:keyStyle="num7KeyStyle" />
+        <Key latin:keyStyle="num8KeyStyle" />
+        <Key latin:keyStyle="num9KeyStyle" />
         <Key
             latin:keyStyle="deleteKeyStyle"
             latin:keyWidth="fillRight" />
     </Row>
     <Row>
         <Key
-            latin:keyStyle="numPhoneToSymbolKeyStyle" />
+            latin:keySpec="&#xFF0A;|*"
+            latin:keyStyle="numSymbolKeyStyle" />
         <!-- U+0030: "0" DIGIT ZERO -->
         <Key
-            latin:keyStyle="num0KeyStyle"
             latin:keySpec="0 +|0"
+            latin:keyStyle="num0KeyStyle"
             latin:moreKeys="!noPanelAutoMoreKey!,+" />
         <Key
-            latin:keyStyle="numSpaceKeyStyle" />
+            latin:keySpec="\#"
+            latin:keyStyle="numSymbolKeyStyle" />
         <Key
             latin:keyStyle="enterKeyStyle"
             latin:keyWidth="fillRight" />
