--- a/java/res/xml/rows_phone_pundxi.xml
+++ b/java/res/xml/rows_phone_pundxi.xml
@@ -27,14 +27,11 @@
         latin:keyboardLayout="@xml/key_styles_number" />
     <Row>
         <Key
-            latin:keySpec="("
-            latin:keyStyle="numSymbolKeyStyle" />
+            latin:keyStyle="num1KeyStyle" />
         <Key
-            latin:keySpec="/"
-            latin:keyStyle="numSymbolKeyStyle" />
+            latin:keyStyle="num2KeyStyle" />
         <Key
-            latin:keySpec=")"
-            latin:keyStyle="numSymbolKeyStyle" />
+            latin:keyStyle="num3KeyStyle" />
         <Key
             latin:keySpec="-"
             latin:moreKeys="+"
@@ -45,17 +42,11 @@
     </Row>
     <Row>
         <Key
-            latin:keySpec="N"
-            latin:keyStyle="numSymbolKeyStyle" />
-        <!-- Pause is a comma. Check PhoneNumberUtils.java to see if this
-            has changed. -->
+            latin:keyStyle="num4KeyStyle" />
         <Key
-            latin:keySpec="!string/label_pause_key|,"
-            latin:keyLabelFlags="followKeyLabelRatio|autoXScale"
-            latin:keyStyle="numSymbolKeyStyle" />
+            latin:keyStyle="num5KeyStyle" />
         <Key
-            latin:keySpec=","
-            latin:keyStyle="numSymbolKeyStyle" />
+            latin:keyStyle="num6KeyStyle" />
         <Key
             latin:keySpec="."
             latin:keyStyle="numKeyStyle"
@@ -63,31 +54,28 @@
             latin:keyWidth="fillRight" />
     </Row>
     <Row>
-        <!-- U+FF0A: "＊" FULLWIDTH ASTERISK -->
         <Key
-            latin:keySpec="&#xFF0A;|*"
-            latin:keyStyle="numSymbolKeyStyle" />
-        <!-- Wait is a semicolon. -->
+            latin:keyStyle="num7KeyStyle" />
         <Key
-            latin:keySpec="!string/label_wait_key|;"
-            latin:keyLabelFlags="followKeyLabelRatio|autoXScale"
-            latin:keyStyle="numSymbolKeyStyle" />
+            latin:keyStyle="num8KeyStyle" />
         <Key
-            latin:keySpec="\#"
-            latin:keyStyle="numSymbolKeyStyle" />
+            latin:keyStyle="num9KeyStyle" />
         <Key
             latin:keyStyle="deleteKeyStyle"
             latin:keyWidth="fillRight" />
     </Row>
     <Row>
         <Key
-            latin:keyStyle="numPhoneToNumericKeyStyle" />
-
-        <Key
-            latin:keySpec="+"
+            latin:keySpec="&#xFF0A;|*"
             latin:keyStyle="numSymbolKeyStyle" />
+        <!-- U+0030: "0" DIGIT ZERO -->
         <Key
-            latin:keyStyle="numSpaceKeyStyle" />
+            latin:keyStyle="num0KeyStyle"
+            latin:keySpec="0 +|0"
+            latin:moreKeys="!noPanelAutoMoreKey!,+" />
+        <Key
+            latin:keySpec="\#"
+            latin:keyStyle="numSymbolKeyStyle" />
         <Key
             latin:keyStyle="enterKeyStyle"
             latin:keyWidth="fillRight" />
